FIX: status emoji was shown on the left on mobile

--- a/app/assets/stylesheets/mobile/topic-post.scss
+++ b/app/assets/stylesheets/mobile/topic-post.scss
@@ -362,6 +362,10 @@ span.highlighted {
       order: 2;
     }
 
+    .user-status-message-wrap {
+      order: 2;
+    }
+
     .second {
       order: 3;
       flex-basis: 100%;
